fixed issue with snippet dialog autocomplete z-index

--- a/src/main/webapp/resources/cupertino/css/requests.css
+++ b/src/main/webapp/resources/cupertino/css/requests.css
@@ -252,6 +252,7 @@ fieldset
 .clear-both
 {
 	clear:both;
+	margin-top:0px;
 }
 
 .new-request-dialog-snippet-breakdown-class
